# SIMD-Mandelbrot-Set

./: .gitignore  CMakeLists.txt  Fractal  GLRender.cpp  Makefile  README.md  fractalV2.cpp  fractalV2.hpp  fragShader.fs  main.cpp  settings.txt
include/: GLRender.hpp  colorConverter.hpp  shader.hpp
src/: GLRender.cpp  fractalV2.cpp  glad.c  main.cpp  vertexShader.vs
